; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_sign/ed25519/ref10/extr_keypair.c_crypto_sign_ed25519_pk_to_curve25519.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_sign/ed25519/ref10/extr_keypair.c_crypto_sign_ed25519_pk_to_curve25519.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_sign_ed25519_pk_to_curve25519(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.TYPE_4__, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @ge25519_has_small_order(i8* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %19, label %12

12:                                               ; preds = %2
  %13 = load i8*, i8** %5, align 8
  %14 = call i64 @ge25519_frombytes_negate_vartime(%struct.TYPE_4__* %6, i8* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %12
  %17 = call i64 @ge25519_is_on_main_subgroup(%struct.TYPE_4__* %6)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16, %12, %2
  store i32 -1, i32* %3, align 4
  br label %45

20:                                               ; preds = %16
  %21 = load i32, i32* %8, align 4
  %22 = call i32 @fe25519_1(i32 %21)
  %23 = load i32, i32* %8, align 4
  %24 = load i32, i32* %8, align 4
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @fe25519_sub(i32 %23, i32 %24, i32 %26)
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @fe25519_1(i32 %28)
  %30 = load i32, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @fe25519_add(i32 %30, i32 %31, i32 %33)
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %8, align 4
  %37 = call i32 @fe25519_invert(i32 %35, i32 %36)
  %38 = load i32, i32* %7, align 4
  %39 = load i32, i32* %7, align 4
  %40 = load i32, i32* %8, align 4
  %41 = call i32 @fe25519_mul(i32 %38, i32 %39, i32 %40)
  %42 = load i8*, i8** %4, align 8
  %43 = load i32, i32* %7, align 4
  %44 = call i32 @fe25519_tobytes(i8* %42, i32 %43)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %20, %19
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i64 @ge25519_has_small_order(i8*) #1

declare dso_local i64 @ge25519_frombytes_negate_vartime(%struct.TYPE_4__*, i8*) #1

declare dso_local i64 @ge25519_is_on_main_subgroup(%struct.TYPE_4__*) #1

declare dso_local i32 @fe25519_1(i32) #1

declare dso_local i32 @fe25519_sub(i32, i32, i32) #1

declare dso_local i32 @fe25519_add(i32, i32, i32) #1

declare dso_local i32 @fe25519_invert(i32, i32) #1

declare dso_local i32 @fe25519_mul(i32, i32, i32) #1

declare dso_local i32 @fe25519_tobytes(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
